--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         
         <div class="ayah-container">
             <div class="ayah">وَأَقِمِ ٱلصَّلَوٰةَ لِذِكْرِىٓ</div>
-            <div class="ayah-translation">"Совершай намаз для Моего поминания" (Коран, 20:14)</div>
+            <div class="ayah-translation">"Воистину, Я — Аллах! Нет божества, кроме Меня. Поклоняйся же Мне и совершай намаз, чтобы помнить обо Мне" (Коран, 20:14)</div>
         </div>
         
         <button class="notify-btn" id="notify-btn">
